fix: increase spacing

--- a/src/scss/mediaQueries.scss
+++ b/src/scss/mediaQueries.scss
@@ -26,7 +26,7 @@
     }
 
     &__image {
-      margin: 1em auto;
+      margin: 2em auto;
     }
 
     &__links {
