--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -7,7 +7,7 @@
 
   &__image {
     border-radius: 0.125em;
-    margin-top: 1em;
+    margin-top: 2em;
     width: 250px;
   }
 
@@ -36,7 +36,7 @@
   }
 
   &__description {
-    margin-top: 1em;
+    margin-top: 2em;
   }
 }
 
